--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 streamlit
-sentence_transformers
-faiss
+sentence-transformers
+faiss-cpu
 numpy
-google.generativeai
-random
-plotly.express
-datetime 
+google-generativeai
+plotly
